--- a/Files/prod.in
+++ b/Files/prod.in
@@ -4,13 +4,13 @@ Production
   igb=8,
   ntx=5,
   irest=1,
-  nstlim=5000000,
+  nstlim=50000,
   dt=0.002,
   ntf=2,
   ntc=2,
   temp0=300.0,
-  ntpr=500,
-  ntwx=500,
+  ntpr=50,
+  ntwx=50,
   cut=9999.0,
   ntb=0,
   ntp=0,
